RESOLVED FIXED165263
Force clicking tests fail on some machines
https://bugs.webkit.org/show_bug.cgi?id=165263
Summary Force clicking tests fail on some machines
Beth Dakin
Reported 2016-12-01 11:58:36 PST
Force clicking tests fail on some machines, which seems to be related to having different preferences set in System Preferences.
Attachments
Patch (2.01 KB, patch)
2016-12-01 12:01 PST, Beth Dakin
thorton: review+
Beth Dakin
Comment 1 2016-12-01 12:01:39 PST
Beth Dakin
Comment 2 2016-12-01 12:13:31 PST
Note You need to log in before you can comment on or make changes to this bug.