Force clicking tests fail on some machines https://bugs.webkit.org/show_bug.cgi?id=165263

Reviewed by Tim Horton.

Initialize com.apple.trackpad.forceClick to 1 so that we don’t have to depend on
the user account having this feature enabled.
* WebKitTestRunner/InjectedBundle/mac/InjectedBundleMac.mm:
(WTR::InjectedBundle::platformInitialize):
* WebKitTestRunner/mac/main.mm:
(setDefaultsToConsistentValuesForTesting):



Canonical link: https://commits.webkit.org/182878@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209192 268f45cc-cd09-0410-ab3c-d52691b4dbfc