Tools/WebKitTestRunner/InjectedBundle/mac/InjectedBundleMac.mm
@@ -81,6 +81,7 @@ void InjectedBundle::platformInitialize(WKTypeRef initializationUserData)
 #endif
         @"AppleEnableSwipeNavigateWithScrolls": @YES,
         @"com.apple.swipescrolldirection": @1,
+        @"com.apple.trackpad.forceClick": @1,
     };
 
     [[NSUserDefaults standardUserDefaults] setVolatileDomain:dict forName:NSArgumentDomain];
